Move RSA 2016 Signature Suite to Digital Verification CG.

--- a/specs/source/lds2016/index.html
+++ b/specs/source/lds2016/index.html
@@ -1,231 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Linked Data Signature 2016</title>
-    <meta http-equiv='Content-Type' content='text/html;charset=utf-8'/>
-    <!--
-      === NOTA BENE ===
-      For the three scripts below, if your spec resides on dev.w3 you can check them
-      out in the same tree and use relative links so that they'll work offline,
-     -->
-    <script src='../../respec-w3c-common.js' async class='remove'></script>
-    <script type="text/javascript" class="remove">
-      var respecConfig = {
-        // specification status (e.g. WD, LCWD, NOTE, etc.). If in doubt use ED.
-        specStatus:           "CG-DRAFT",
-
-        // the specification's short name, as in http://www.w3.org/TR/short-name/
-        shortName:            "lds2016",
-
-        // if you wish the publication date to be other than today, set this
-        // publishDate:  "2009-08-06",
-
-        // if there is a previously published draft, uncomment this and set its YYYY-MM-DD date
-        // and its maturity status
-        // previousPublishDate:  "1977-03-15",
-        // previousMaturity:  "WD",
-
-        // if there a publicly available Editor's Draft, this is the link
-        edDraftURI:           "https://web-payments.org/specs/source/lds2016",
-
-        // if this is a LCWD, uncomment and set the end of its review period
-        // lcEnd: "2009-08-05",
-
-        // if you want to have extra CSS, append them to this list
-        // it is recommended that the respec.css stylesheet be kept
-        //extraCSS:             ["spec.css", "prettify.css"],
-
-        // editors, add as many as you like
-        // only "name" is required
-        editors:  [
-          { name: "Manu Sporny", url: "http://digitalbazaar.com/",
-            company: "Digital Bazaar, Inc.", companyURL: "http://digitalbazaar.com/" }
-        ],
-
-        // authors, add as many as you like.
-        // This is optional, uncomment if you have authors as well as editors.
-        // only "name" is required. Same format as editors.
-
-        authors:  [
-            { name: "Dave Longley", url: "http://digitalbazaar.com/",
-              company: "Digital Bazaar, Inc.", companyURL: "http://digitalbazaar.com/" },
-            { name: "Manu Sporny", url: "http://digitalbazaar.com/",
-              company: "Digital Bazaar, Inc.", companyURL: "http://digitalbazaar.com/" }
-        ],
-
-        // extend the bibliography entries
-        //localBiblio: webpayments.localBiblio,
-
-        // name of the WG
-        wg:           "W3C Web Payments Community Group",
-
-        // URI of the public WG page
-        wgURI:        "http://www.w3.org/community/webpayments/",
-
-        // name (with the @w3c.org) of the public mailing to which comments are due
-        wgPublicList: "public-webpayments@w3.org",
-
-        // URI of the patent status for this WG, for Rec-track documents
-        // !!!! IMPORTANT !!!!
-        // This is important for Rec-track documents, do not copy a patent URI from a random
-        // document unless you know what you're doing. If in doubt ask your friendly neighbourhood
-        // Team Contact.
-        wgPatentURI:  "",
-        maxTocLevel: 4,
-        /*preProcess: [ webpayments.preProcess ],
-        alternateFormats: [ {uri: "diff-20111214.html", label: "diff to previous version"} ],
-        */
-        localBiblio:  {
-          "RDF-DATASET-NORMALIZATION": {
-            title:    "RDF Dataset Normalization 1.0",
-            href:     "http://json-ld.github.io/normalization/spec/",
-            authors:  ["David Longley", "Manu Sporny"],
-            status:   "CGDRAFT",
-            publisher:  "JSON-LD Community Group"
-          },
-          "SECURITY-VOCABULARY": {
-            title:    "Security Linked Data Vocabulary",
-            href:     "https://web-payments.org/vocabs/security",
-            authors:  ["Manu Sporny","David Longley"],
-            status:   "CGDRAFT",
-            publisher:  "Web Payments Community Group"
-          },
-          "LD-SIGNATURES": {
-            title:    "Linked Data Signatures 1.0",
-            href:     "https://web-payments.org/specs/source/ld-signatures/",
-            authors:  ["David Longley", "Manu Sporny"],
-            status:   "CGDRAFT",
-            publisher:  "Web Payments Community Group"
-          }
-        }
-      };
-    </script>
+    <title>Page has moved</title>
+    <meta http-equiv="refresh" content="0; URL='http://w3c.github.io/lds-rsa2016/'" />
   </head>
   <body>
-    <section id='abstract'>
       <p>
-This specification describes a standard signature suite created in 2016 for the
-Linked Data Signatures specification.
+This page has moved to <a href="http://w3c.github.io/lds-rsa2016/">http://w3c.github.io/lds-rsa2016/</a>.
       </p>
-    </section>
-
-    <section id='sotd'>
-      <p>
-This is an experimental specification and is undergoing regular revisions. It
-is not fit for production deployment.
-      </p>
-    </section>
-
-    <section>
-      <h2>Introduction</h2>
-      <p>
-This specification describes a standard signature suite created in 2016 for the
-Linked Data Signatures [[LD-SIGNATURES]] specification. It uses the RDF
-Dataset Normalization Algorithm [[RDF-DATASET-NORMALIZATION]] to transform the
-input document into its canonical form. It uses SHA-256 [[RFC6234]] as the
-<a>message digest algorithm</a> and RSASSA-PKCS1-v1_5 [[RFC3447]] as the
-<a>signature algorithm</a>.
-      </p>
-    </section>
-
-    <section>
-      <h2>Terminology</h2>
-      <p>
-The following terms are used to describe concepts involved in the
-generation and verification of the Linked Data Signature 2016
-<a>signature suite</a>.
-      </p>
-
-      <dl>
-        <dt><dfn>signature suite</dfn></dt>
-        <dd>
-A specified set of cryptographic primitives typically consisting of
-a canonicalization algorithm, a message digest algorithm, and a signature
-algorithm that are bundled together by cryptographers for developers
-for the purposes of safety and convenience.
-        </dd>
-        <dt><dfn>canonicalization algorithm</dfn></dt>
-        <dd>
-An algorithm that takes an input document that has more than one possible
-representation and always transforms it into a canonical form. This process is
-sometimes also called normalization.
-        </dd>
-        <dt><dfn>message digest algorithm</dfn></dt>
-        <dd>
-An algorithm that takes an input message and produces a cryptographic
-output message that is often many orders of magnitude smaller than the
-input message. These algorithms are often 1) very fast, 2)
-non-reversible, 3) cause the output to change significantly when even one
-bit of the input message changes, and 4) make it infeasible to find two
-different inputs for the same output.
-        </dd>
-        <dt><dfn>signature algorithm</dfn></dt>
-        <dd>
-An algorithm that takes an input message and produces an output value where the
-receiver of the message can mathematically verify that the message has not
-been modified in transit and came from someone possessing a particular secret.
-        </dd>
-      </dl>
-
-    </section>
-
-    <section>
-      <h2>The Linked Data Signature 2016 Signature Suite</h2>
-
-      <p>
-The Linked Data Signature 2016 <a>signature suite</a> MUST be used in
-conjunction with the signing and verification algorithms in the
-Linked Data Signatures [[LD-SIGNATURES]] specification. The suite consists of
-the following algorithms:
-      </p>
-
-      <table class="simple">
-        <thead>
-          <th>Parameter</th>
-          <th>Value</th>
-          <th>Specification</th>
-        </thead>
-        <tbody>
-          <tr>
-            <td>canonicalizationAlgorithm</td>
-            <td>https://w3id.org/security#URDNA2015</td>
-            <td>[[RDF-DATASET-NORMALIZATION]]</td>
-          </tr>
-          <tr>
-            <td>digestAlgorithm</td>
-            <td>http://example.com/digests#sha256</td>
-            <td>[[RFC6234]]</td>
-          </tr>
-          <tr>
-            <td>signatureAlgorithm</td>
-            <td>http://www.w3.org/2000/09/xmldsig#rsa-sha1</td>
-            <td>[[RFC3447]]</td>
-          </tr>
-        </tbody>
-
-      </table>
-
-    <section>
-      <h2>Modification to Algorithms</h2>
-
-      <p>
-No modifications to the Linked Data Signature algorithms are provided other
-than the algorithms specified in the previous signature suite section.
-      </p>
-    </section>
-
-    <section>
-      <h2>Security Considerations</h2>
-      <p>
-The following section describes security considerations that developers
-implementing this specification should be aware of in order to create secure
-software.
-      </p>
-
-<div class="issue">TODO: We need to add a complete list of security
-considerations.</div>
-    </section>
-
   </body>
 </html>
-
