Update new home for LD Signatures and associated sig suites.

--- a/specs/source/ld-signatures/index.html
+++ b/specs/source/ld-signatures/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Linked Data Signatures has moved</title>
-    <meta http-equiv="refresh" content="0; URL='http://w3c.github.io/ld-signatures/'" />
+    <meta http-equiv="refresh" content="0; URL='http://w3c-dvcg.github.io/ld-signatures/'" />
   </head>
   <body>
       <p>
-This page has moved to <a href="http://w3c.github.io/ld-signatures/">http://w3c.github.io/ld-signatures/</a>.
+This page has moved to <a href="http://w3c-dvcg.github.io/ld-signatures/">http://w3c-dvcg.github.io/ld-signatures/</a>.
       </p>
   </body>
 </html>
