--- a/specs/source/lds-koblitz2016/index.html
+++ b/specs/source/lds-koblitz2016/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Page has moved</title>
-    <meta http-equiv="refresh" content="0; URL='http://w3c.github.io/lds-koblitz2016/'" />
+    <meta http-equiv="refresh" content="0; URL='http://w3c-dvcg.github.io/lds-koblitz2016/'" />
   </head>
   <body>
       <p>
-This page has moved to <a href="http://w3c.github.io/lds-koblitz2016/">http://w3c.github.io/lds-koblitz2016/</a>.
+This page has moved to <a href="http://w3c-dvcg.github.io/lds-koblitz2016/">http://w3c-dvcg.github.io/lds-koblitz2016/</a>.
       </p>
   </body>
 </html>
